@@ -1,4 +1,7 @@
 
+2010-03-07  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
+	* misc: Speed up category view
+
 2010-02-28  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
 	* misc: When creating a subtask, the navigation bar would read "New task"
 	  instead of "New subtask".
